# to

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  test_config.json  vite.config.ts
assets/: Sandbox.json
logs/: app.log.2026-02-04
overlay/: index.html  live-reload.js  state.json  style.css
overlay/dual/: index.html  style.css
overlay/quad/: index.html  style.css
overlay/upcoming/: index.html  style.css
scripts/: list_slippi_codes.js  open_with_vkcapture.sh  print_startgg_info.js  scan_bracket_replays.js  spoof_live_games.js  sync_startgg_bracket.js  vkcapture_exe_override.c
src/: App.css  App.tsx  startggAdapter.ts  tournamentUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: bracket-window.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dolphin.rs  entrant_commands.rs  entrants.rs  lib.rs  main.rs  replay.rs  slippi.rs  startgg.rs  startgg_sim.rs  startgg_sim_commands.rs  test_mode.rs  types.rs
src/components/: BracketSetDetailsModal.tsx  BracketSettingsModal.tsx  BracketView.tsx  EntrantsList.tsx  MainView.tsx  SettingsModal.tsx  SetupDetailsModal.tsx  SetupsList.tsx  SlippiCodeModal.tsx
src/hooks/: useAttendees.ts  useBracket.ts  useConfig.ts  useEntrants.ts  useSetups.ts  useStreams.ts
src/types/: overlay.ts
